TextToBinParser.py
# Generated from TextToBin.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TextToBinParser ( Parser ):

    grammarFileName = "TextToBin.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'='", "';'", "<INVALID>", 
                     "'=='", "<INVALID>", "'>='", "'<='", "'>'", "'<'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ASSIGN", "DELIMITER", 
                      "INVALID_OP", "EQ", "NEQ", "GE", "LE", "GT", "LT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "LPAREN", "RPAREN", 
                      "INVALID_ID", "NUMBER", "IDENTIFIER", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "UNKNOWN" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expr = 2
    RULE_relationalExpr = 3
    RULE_additiveExpr = 4
    RULE_multiplicativeExpr = 5
    RULE_unaryExpr = 6
    RULE_primary = 7

    ruleNames =  [ "program", "statement", "expr", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primary" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ASSIGN=3
    DELIMITER=4
    INVALID_OP=5
    EQ=6
    NEQ=7
    GE=8
    LE=9
    GT=10
    LT=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    MOD=16
    LPAREN=17
    RPAREN=18
    INVALID_ID=19
    NUMBER=20
    IDENTIFIER=21
    WS=22
    LINE_COMMENT=23
    BLOCK_COMMENT=24
    UNKNOWN=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TextToBinParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TextToBinParser.StatementContext)
            else:
                return self.getTypedRuleContext(TextToBinParser.StatementContext,i)


        def getRuleIndex(self):
            return TextToBinParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TextToBinParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 16
                self.statement()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(TextToBinParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TextToBinParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TextToBinParser.ExprContext)
            else:
                return self.getTypedRuleContext(TextToBinParser.ExprContext,i)


        def THEN(self):
            return self.getToken(TextToBinParser.THEN, 0)

        def IDENTIFIER(self):
            return self.getToken(TextToBinParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(TextToBinParser.ASSIGN, 0)

        def DELIMITER(self):
            return self.getToken(TextToBinParser.DELIMITER, 0)

        def getRuleIndex(self):
            return TextToBinParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = TextToBinParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(TextToBinParser.IF)
            self.state = 25
            self.expr()
            self.state = 26
            self.match(TextToBinParser.THEN)
            self.state = 27
            self.match(TextToBinParser.IDENTIFIER)
            self.state = 28
            self.match(TextToBinParser.ASSIGN)
            self.state = 29
            self.expr()
            self.state = 30
            self.match(TextToBinParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpr(self):
            return self.getTypedRuleContext(TextToBinParser.RelationalExprContext,0)


        def getRuleIndex(self):
            return TextToBinParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = TextToBinParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.relationalExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TextToBinParser.AdditiveExprContext)
            else:
                return self.getTypedRuleContext(TextToBinParser.AdditiveExprContext,i)


        def GT(self):
            return self.getToken(TextToBinParser.GT, 0)

        def LT(self):
            return self.getToken(TextToBinParser.LT, 0)

        def GE(self):
            return self.getToken(TextToBinParser.GE, 0)

        def LE(self):
            return self.getToken(TextToBinParser.LE, 0)

        def EQ(self):
            return self.getToken(TextToBinParser.EQ, 0)

        def NEQ(self):
            return self.getToken(TextToBinParser.NEQ, 0)

        def getRuleIndex(self):
            return TextToBinParser.RULE_relationalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)




    def relationalExpr(self):

        localctx = TextToBinParser.RelationalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relationalExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.additiveExpr()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4032) != 0):
                self.state = 35
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4032) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 36
                self.additiveExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TextToBinParser.MultiplicativeExprContext)
            else:
                return self.getTypedRuleContext(TextToBinParser.MultiplicativeExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(TextToBinParser.PLUS)
            else:
                return self.getToken(TextToBinParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(TextToBinParser.MINUS)
            else:
                return self.getToken(TextToBinParser.MINUS, i)

        def getRuleIndex(self):
            return TextToBinParser.RULE_additiveExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpr" ):
                listener.enterAdditiveExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpr" ):
                listener.exitAdditiveExpr(self)




    def additiveExpr(self):

        localctx = TextToBinParser.AdditiveExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_additiveExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.multiplicativeExpr()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==13:
                self.state = 40
                _la = self._input.LA(1)
                if not(_la==12 or _la==13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 41
                self.multiplicativeExpr()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TextToBinParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(TextToBinParser.UnaryExprContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(TextToBinParser.MUL)
            else:
                return self.getToken(TextToBinParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(TextToBinParser.DIV)
            else:
                return self.getToken(TextToBinParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(TextToBinParser.MOD)
            else:
                return self.getToken(TextToBinParser.MOD, i)

        def getRuleIndex(self):
            return TextToBinParser.RULE_multiplicativeExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpr" ):
                listener.enterMultiplicativeExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpr" ):
                listener.exitMultiplicativeExpr(self)




    def multiplicativeExpr(self):

        localctx = TextToBinParser.MultiplicativeExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_multiplicativeExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.unaryExpr()
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 114688) != 0):
                self.state = 48
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 114688) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 49
                self.unaryExpr()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(TextToBinParser.MINUS, 0)

        def unaryExpr(self):
            return self.getTypedRuleContext(TextToBinParser.UnaryExprContext,0)


        def primary(self):
            return self.getTypedRuleContext(TextToBinParser.PrimaryContext,0)


        def getRuleIndex(self):
            return TextToBinParser.RULE_unaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)




    def unaryExpr(self):

        localctx = TextToBinParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_unaryExpr)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.match(TextToBinParser.MINUS)
                self.state = 56
                self.unaryExpr()
                pass
            elif token in [17, 20, 21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(TextToBinParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(TextToBinParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(TextToBinParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TextToBinParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(TextToBinParser.RPAREN, 0)

        def getRuleIndex(self):
            return TextToBinParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = TextToBinParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primary)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(TextToBinParser.NUMBER)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(TextToBinParser.IDENTIFIER)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.match(TextToBinParser.LPAREN)
                self.state = 63
                self.expr()
                self.state = 64
                self.match(TextToBinParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





